# qb_stonk

./: .gitignore  .travis.yml  Cargo.toml  README.md  notes  rustfmt.toml
src/: main.rs
src/business/: mod.rs
src/discord/: mod.rs  shutdown_sender.rs
src/groger/: mod.rs
src/user/: mod.rs
