[package]
name = "qb_stonk"
version = "0.1.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.9.19"
soup = "0.4.1"
serde_json = "1.0"
serenity = "0.6.3"

